; ModuleID = '/home/carl/AnghaBench/8cc/extr_gen.c_pop.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_gen.c_pop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SAVE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"pop #%s\00", align 1
@stackpos = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @pop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pop(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @SAVE, align 4
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @emit(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %4)
  %6 = load i64, i64* @stackpos, align 8
  %7 = sub nsw i64 %6, 8
  store i64 %7, i64* @stackpos, align 8
  %8 = load i64, i64* @stackpos, align 8
  %9 = icmp sge i64 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  ret void
}

declare dso_local i32 @emit(i8*, i8*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
